--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -12,6 +12,6 @@
     <Description>提供 SVG 路径访问者模式的解析。</Description>
 
     <RepositoryType>git</RepositoryType>
-    <Copyright>Copyright © 2021 dotnet campus, All Rights Reserved.</Copyright>
+    <Copyright>Copyright © 2021-2023 dotnet campus, All Rights Reserved.</Copyright>
   </PropertyGroup>
 </Project>
